--- a/cnn for amnist.ipynb
+++ b/cnn for amnist.ipynb
@@ -135,16 +135,11 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Kernel fucked and i was laid down"
+   ]
   },
   {
    "cell_type": "code",
